// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifExpertApp /> should display a category list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Man of Steel"
      key="Man of Steel"
    />
    <GifGrid
      category="Dark Knight"
      key="Dark Knight"
    />
  </ol>
</Fragment>
`;

exports[`<GifExpertApp /> should match snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
